--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -3,17 +3,13 @@ body {
 }
 
 .portfolio-section {
-  margin: 3rem 0;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
 }
 
 img {
   border-radius: .375rem;
 
-}
-
-/* js section */
-.js-section {
-  margin-bottom: 3rem;
 }
 
 .main-content .row {
